--- a/Telco_Churn_Report.ipynb
+++ b/Telco_Churn_Report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af18a1b3",
+   "id": "f5136730",
    "metadata": {},
    "source": [
     "# Telco Churn Report\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37ec0ee",
+   "id": "a80eca00",
    "metadata": {},
    "source": [
     "## Project Goals:\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd7201ca",
+   "id": "a3cc8d89",
    "metadata": {},
    "source": [
     "## Wrangle Telco Data\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d280624a",
+   "id": "eb08e1e9",
    "metadata": {},
    "source": [
     "### Data Aquisition\n",
@@ -88,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9de94b7b",
+   "execution_count": 42,
+   "id": "c2878de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8364628d",
+   "id": "34f3d85d",
    "metadata": {},
    "source": [
     "### Acquire the data"
@@ -144,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "138e7718",
+   "execution_count": 43,
+   "id": "80e27881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106956da",
+   "id": "260486ee",
    "metadata": {},
    "source": [
     "#### Initial data exploration"
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f48d03b1",
+   "id": "0dd0bd20",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "20358a79",
+   "id": "3e75938c",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8b18907",
+   "id": "8e4931ed",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ca66a76e",
+   "id": "2839dc61",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a668fd8",
+   "id": "ce409df9",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "68c33583",
+   "id": "db5466c1",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ea636aa6",
+   "id": "21023fba",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edd6dd3",
+   "id": "aa67a912",
    "metadata": {},
    "source": [
     "### Acquire Takeaways\n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c012d0f4",
+   "id": "30f25df6",
    "metadata": {},
    "source": [
     "### Data Preparation\n",
@@ -527,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "20b429b6",
+   "execution_count": 40,
+   "id": "778a9011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f01eca3f",
+   "id": "b7eb5419",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4a62a395",
+   "id": "f6982923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0927bc73",
+   "id": "7e01c9f0",
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e21b48a",
+   "id": "38db99b7",
    "metadata": {},
    "source": [
     "### Takeaways:\n",
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b448a979",
+   "id": "327f5710",
    "metadata": {},
    "source": [
     "## Data Exploration\n",
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fed289",
+   "id": "6c1b62ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2f9e45",
+   "id": "ceb4e894",
    "metadata": {},
    "source": [
     "#### Train, Validate, Test Split\n",
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "29b78e3c",
+   "id": "febc1824",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd35fe1",
+   "id": "2ed0305d",
    "metadata": {},
    "source": [
     "## Hypothesis Testing\n",
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "60f0313d",
+   "id": "f409d8f0",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0774a4",
+   "id": "35b539db",
    "metadata": {},
    "source": [
     "### Bill Pay Feature Visualization\n",
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2a35243f",
+   "id": "f06388d6",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0ec3b9",
+   "id": "9a7577bc",
    "metadata": {},
    "source": [
     "### Test 2: Two-sample, two-tailed T-test\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "777a7f9a",
+   "id": "4b020945",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "322de6b1",
+   "id": "a1421b13",
    "metadata": {},
    "source": [
     "### Monthly Charges Feature Visualization\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cfeed812",
+   "id": "9195cb75",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db72a36a",
+   "id": "1aaf60e7",
    "metadata": {},
    "source": [
     "### Hypothesis Testing Takeaways:\n",
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c537e83",
+   "id": "2587307d",
    "metadata": {},
    "source": [
     "## Bivariate Exploration"
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "36ac35ba",
+   "id": "ebc68e6e",
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb662a1",
+   "id": "29aad71d",
    "metadata": {},
    "source": [
     "### Bivariate Exploration Takeaways:\n",
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddd3d53",
+   "id": "b7cd6ed2",
    "metadata": {},
    "source": [
     "### Multivariate Exploration\n",
@@ -2076,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "56fca8ff",
+   "id": "7acc59cc",
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59abfe8e",
+   "id": "bdb9cedf",
    "metadata": {},
    "source": [
     "### Multivariate Exploration Takeaways:\n",
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9683122",
+   "id": "77d78f94",
    "metadata": {},
    "source": [
     "### Modeling & Evaluation\n",
@@ -2203,7 +2203,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e53732c2",
+   "id": "661f9d44",
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854da8b2",
+   "id": "1a3fa71c",
    "metadata": {},
    "source": [
     "###### This model's accuracy is essentially the same as the baseline accuracy (73.46%). Therefore, this model is immediately rejected.\n"
@@ -2263,7 +2263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bcae8f",
+   "id": "e87c19cb",
    "metadata": {},
    "source": [
     "### Model 2: KNN with K = 5"
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6c6ee5b4",
+   "id": "73c2faa3",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35ed455c",
+   "id": "18175263",
    "metadata": {},
    "source": [
     "### Model 3: KNN with K = 2"
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1e46e035",
+   "id": "cf9cfbc4",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07b02f9",
+   "id": "76e080f4",
    "metadata": {},
    "source": [
     "### Model 4: Random Forest"
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5726d0ec",
+   "id": "575de2f0",
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b924efe4",
+   "id": "39da39e7",
    "metadata": {},
    "source": [
     "#### Takeaways:\n",
@@ -2441,7 +2441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61fdf086",
+   "id": "035e6d87",
    "metadata": {},
    "source": [
     "## Evaluate Models with Validate Dataframe"
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f679794",
+   "id": "a4ffb1c5",
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16056265",
+   "id": "50f6e4b5",
    "metadata": {},
    "source": [
     "### Evaluate Model 4 (RF) with Test Dataframe"
@@ -2533,7 +2533,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "476c4cef",
+   "id": "7651e9a7",
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172f2b28",
+   "id": "39016727",
    "metadata": {},
    "source": [
     "### Takeaways:\n",
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ace7d4",
+   "id": "983e5fa2",
    "metadata": {},
    "source": [
     "## Reccomendations\n",
@@ -2593,13 +2593,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99d27776",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "- 27% of Telco customers churn\n",
+    "- Bill pay method is a driver of churn supported by the Chi Squared statistical test at 95% confidence interval\n",
+    "- Monthly Charges is a driver of churn supported by the T-test statistical test with a 95% confidence interval\n",
+    "- Model 4 is a Random Forest model devloped to predict customer churn. It performed with 80% accuracy on out of sample data, beating the baseline accuracy model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbeb37ea",
+   "metadata": {},
+   "source": [
+    "### Appendix:\n",
+    "#### Prepare Deliverables\n",
+    "The code below prepares a `.csv` file of the test dataframe where each observation is a customer with the probability of churn and prediction of churn."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586ecbc2",
+   "id": "61c1add1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Conclusion"
+    "#Write predictions and probability of churn to csv\n",
+    "\n",
+    "#drop columns on entire test dataframe to match X_test\n",
+    "test.drop(columns=['churn','senior_citizen', 'partner', 'dependents', 'phone_service',\n",
+    "                    'multiple_lines', 'online_security', 'online_backup', 'device_protection',\n",
+    "                    'streaming_tv','streaming_movies', 'paperless_billing',  \n",
+    "                    'baseline_prediction', 'tech_support'], inplace=True)\n",
+    "\n",
+    "#Calculate the predictions and probability for the test dataframe\n",
+    "y_pred_final = rf.predict(test)\n",
+    "y_pred_proba = rf.predict_proba(test)\n",
+    "\n",
+    "#Create a prediction column and fill with values\n",
+    "test['churn_prediction'] = y_pred_final\n",
+    "\n",
+    "#Create a probability column and fill with values\n",
+    "#Note: Need to transform the array and take index 1 values ==> probability FOR churn\n",
+    "test['churn_probability'] = y_pred_proba.T[1]\n",
+    "\n",
+    "#Drop columns not needed for csv\n",
+    "test.drop(columns=['contract_type_id', 'auto_bill_pay', 'tenure', 'monthly_charges', \n",
+    "                    'total_charges', 'internet_service_type_id', 'gender_Male'], inplace=True)\n",
+    "\n",
+    "#Write to CSV\n",
+    "#test.to_csv('telco_churn_pred_and_proba.csv', index=True)"
    ]
   }
  ],
